// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with expenses 1`] = `
<div>
  <h2>
    Viewing 
    3
     expense
    s
     totalling 
    $1,141.95
  </h2>
</div>
`;

exports[`should render ExpensesSummary with no expenses 1`] = `
<div>
  <h2>
    Viewing 
    0
     expense
    s
     totalling 
    $0.00
  </h2>
</div>
`;
